--- a/TFT_DataCollection.ipynb
+++ b/TFT_DataCollection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -26,7 +26,8 @@
     "##puuid is public id of an account\n",
     "\n",
     "puu_id = \"sqBQF6Ad3FRad6KJlQ0fZUihhBy8Dw0MeR9C4o8K6M2BnDZ52eTai6vhAKkF7DGdZp8hR_fO0hUk4Q\"\n",
-    "\n",
+    "id = \"vsHnWoQh9Z__6zfT6ta2tNX8vy9xKmI8Ku7N1vcvnAZgTQ8\"\n",
+    "account_id = \"99F7KYdUR2qDwegpvP-9GdH4nrSXqHz5M5q5FZJcLE8CDA\"\n",
     "##Utilizes f-string denoted with curly brackets to utilize the puu_id and api_key within url\n",
     "api_url = f\"https://americas.api.riotgames.com/lol/match/v5/matches/by-puuid/{puu_id}/ids?start=0&count=20&api_key={api_key}\"\n",
     "requests.get(api_url)"
