Created the method to read the champions and items used in the current match

--- a/TFT_DataCollection.ipynb
+++ b/TFT_DataCollection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,13 +38,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['NA1_5174386407',\n",
+       "['NA1_5177342096',\n",
+       " 'NA1_5177315746',\n",
+       " 'NA1_5177281877',\n",
+       " 'NA1_5177243667',\n",
+       " 'NA1_5177206913',\n",
+       " 'NA1_5177163353',\n",
+       " 'NA1_5176980970',\n",
+       " 'NA1_5176951602',\n",
+       " 'NA1_5175700430',\n",
+       " 'NA1_5175454600',\n",
+       " 'NA1_5175403559',\n",
+       " 'NA1_5175379796',\n",
+       " 'NA1_5175339558',\n",
+       " 'NA1_5175312129',\n",
+       " 'NA1_5175271661',\n",
+       " 'NA1_5175241151',\n",
+       " 'NA1_5175207024',\n",
+       " 'NA1_5175175417',\n",
+       " 'NA1_5175153203',\n",
+       " 'NA1_5174386407',\n",
        " 'NA1_5174354888',\n",
        " 'NA1_5174323533',\n",
        " 'NA1_5174293392',\n",
@@ -74,29 +93,10 @@
        " 'NA1_5169412786',\n",
        " 'NA1_5169373097',\n",
        " 'NA1_5168650883',\n",
-       " 'NA1_5168578444',\n",
-       " 'NA1_5168533642',\n",
-       " 'NA1_5168488752',\n",
-       " 'NA1_5168454115',\n",
-       " 'NA1_5168415863',\n",
-       " 'NA1_5167823739',\n",
-       " 'NA1_5167785098',\n",
-       " 'NA1_5167755269',\n",
-       " 'NA1_5167721424',\n",
-       " 'NA1_5167682875',\n",
-       " 'NA1_5167646180',\n",
-       " 'NA1_5167603415',\n",
-       " 'NA1_5167569197',\n",
-       " 'NA1_5167529311',\n",
-       " 'NA1_5167483445',\n",
-       " 'NA1_5167448977',\n",
-       " 'NA1_5167405879',\n",
-       " 'NA1_5167376416',\n",
-       " 'NA1_5167340803',\n",
-       " 'NA1_5167302682']"
+       " 'NA1_5168578444']"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
        "dict_keys(['metadata', 'info'])"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1134,7 +1134,7 @@
        "  'win': True}]"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1150,7 +1150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1159,7 +1159,7 @@
        "'8CsAUQYhSFNn-XysZw-C_hvlN6Z4yTUR7DyMnYX_QblWQHme8bEUroCSHvh5sPtrD285XLMOvvyAMQ'"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1174,7 +1174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1314,7 +1314,7 @@
        " 'win': True}"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1342,7 +1342,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'name': 'Black Rose', 'num_units': 5, 'style': 4, 'tier_current': 3, 'tier_total': 4}, {'name': 'Form Swapper', 'num_units': 2, 'style': 1, 'tier_current': 1, 'tier_total': 2}, {'name': 'Dominator', 'num_units': 4, 'style': 2, 'tier_current': 2, 'tier_total': 3}, {'name': 'Visionary', 'num_units': 2, 'style': 1, 'tier_current': 1, 'tier_total': 4}, {'name': 'Sorcerer', 'num_units': 3, 'style': 1, 'tier_current': 1, 'tier_total': 4}, {'name': 'Conqueror', 'num_units': 2, 'style': 1, 'tier_current': 1, 'tier_total': 4}]\n"
+      "[{'name': 'Black Rose', 'num_units': 5, 'style': 4, 'tier_current': 3, 'tier_total': 4}, {'name': 'Form Swapper', 'num_units': 2, 'style': 1, 'tier_current': 1, 'tier_total': 2}, {'name': 'Dominator', 'num_units': 4, 'style': 2, 'tier_current': 2, 'tier_total': 3}, {'name': 'Visionary', 'num_units': 2, 'style': 1, 'tier_current': 1, 'tier_total': 4}, {'name': 'Sorcerer', 'num_units': 3, 'style': 1, 'tier_current': 1, 'tier_total': 4}, {'name': 'Conqueror', 'num_units': 2, 'style': 1, 'tier_current': 1, 'tier_total': 4}]\n",
+      "[{'character_name': 'Morgana', 'itemNames': []}, {'character_name': 'Vladimir', 'itemNames': ['LocketOfTheIronSolari']}, {'character_name': 'Swain', 'itemNames': []}, {'character_name': 'Cassiopeia', 'itemNames': []}, {'character_name': 'Elise', 'itemNames': ['GargoyleStoneplate', 'GargoyleStoneplate', 'WarmogsArmor']}, {'character_name': 'Silco', 'itemNames': ['MadredsBloodrazor', 'SpearOfShojin', 'Leviathan']}, {'character_name': 'Drmundo', 'itemNames': ['FrozenHeart']}, {'character_name': 'Malzahar', 'itemNames': ['RapidFireCannon', 'StatikkShiv']}, {'character_name': 'Leblanc', 'itemNames': []}, {'character_name': 'Mordekaiser', 'itemNames': ['ThiefsGloves', 'JeweledGauntlet', 'RabadonsDeathcap']}, {'character_name': 'Sion', 'itemNames': []}]\n"
      ]
     }
    ],
@@ -1350,7 +1351,7 @@
     "boxbox_current_match = find_player_team(puu_id, match_data)\n",
     "\n",
     "import json  # Import the json module\n",
-    "\n",
+    "import re\n",
     "# Load mapping from JSON file\n",
     "with open('tft-trait.json', 'r') as f:\n",
     "    name_mapping_trait = json.load(f)\n",
@@ -1367,17 +1368,31 @@
     "            trait_list.append(trait)\n",
     "    return trait_list        \n",
     "\n",
-    "def champions_items_used(current_match, name_mapping_champion, name_mapping_item):\n",
-    "    \n",
+    "def champions_items_used(current_match):\n",
+    "    champion_list = []\n",
+    "\n",
+    "    for champion in current_match['units']:\n",
+    "        processed_entry = {\n",
+    "            ##Insensitive casing to remove prefix and capitalize the name of the champion utilized\n",
+    "            'character_name': re.sub(r'(?i)tft13_','',champion['character_id']).capitalize(), \n",
+    "            \n",
+    "            ##Insensitive casing to remove prefix for each item (up to 3 items total) per champion\n",
+    "            'itemNames': [re.sub(r\"(?i)tft_item_\",\"\",item) for item in champion['itemNames']]\n",
+    "        }\n",
+    "        champion_list.append(processed_entry)\n",
+    "    return champion_list\n",
     "\n",
     "# Call the function and print the result\n",
     "result = traits_used(boxbox_current_match, name_mapping)\n",
+    "print(result)\n",
+    "\n",
+    "result = champions_items_used(boxbox_current_match)\n",
     "print(result)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1402,7 +1417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
