testing to see how many unique items are available in TFT

--- a/TFT_DataCollection.ipynb
+++ b/TFT_DataCollection.ipynb
@@ -1449,6 +1449,34 @@
     "print(name_mapping_champion['data'])\n",
     "print(name_mapping_champion['data']['Maps/Shipping/Map22/Sets/TFTSet13/Shop/TFT13_Ekko']['name'])\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "107\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 0\n",
+    "for item in name_mapping_trait['data']:\n",
+    "    x = x+1\n",
+    "\n",
+    "print(x)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
