Updated the file to check for exceptions for database connections

--- a/db_connection.ipynb
+++ b/db_connection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,18 +10,25 @@
     "\n",
     "##Function to connect to the database\n",
     "def get_connection():\n",
-    "    return psycopg2.connect(\n",
-    "        dbname=\"tft_boxbox\",\n",
-    "        user=\"postgres\",\n",
-    "        password=\"postgres1\",\n",
-    "        host=\"localhost\",  # or your server's IP\n",
-    "        port=\"5432\"  # Default PostgreSQL port\n",
-    "    )"
+    "    try:\n",
+    "    \n",
+    "        conn = psycopg2.connect(\n",
+    "            dbname=\"tft_boxbox\",\n",
+    "            user=\"postgres\",\n",
+    "            password=\"postgres1\",\n",
+    "            host=\"localhost\",  # or your server's IP\n",
+    "            port=\"5432\"  # Default PostgreSQL port\n",
+    "        )\n",
+    "        return conn\n",
+    "    except Exception as e:\n",
+    "        print(\"Error while connecting to the databse:\",e)\n",
+    "        return None\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
