Added a way to insert the raw trait and champion list as JSON data into database

--- a/TFT_DataCollection.ipynb
+++ b/TFT_DataCollection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,13 +38,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['NA1_5177342096',\n",
+       "['NA1_5181663428',\n",
+       " 'NA1_5181656785',\n",
+       " 'NA1_5180322566',\n",
+       " 'NA1_5180263750',\n",
+       " 'NA1_5180232778',\n",
+       " 'NA1_5179977980',\n",
+       " 'NA1_5179969841',\n",
+       " 'NA1_5179960666',\n",
+       " 'NA1_5179902182',\n",
+       " 'NA1_5179784493',\n",
+       " 'NA1_5179753974',\n",
+       " 'NA1_5177342096',\n",
        " 'NA1_5177315746',\n",
        " 'NA1_5177281877',\n",
        " 'NA1_5177243667',\n",
@@ -82,21 +93,10 @@
        " 'NA1_5170816673',\n",
        " 'NA1_5170771555',\n",
        " 'NA1_5170719769',\n",
-       " 'NA1_5170670210',\n",
-       " 'NA1_5170614448',\n",
-       " 'NA1_5170581968',\n",
-       " 'NA1_5169656119',\n",
-       " 'NA1_5169598478',\n",
-       " 'NA1_5169536395',\n",
-       " 'NA1_5169491035',\n",
-       " 'NA1_5169457166',\n",
-       " 'NA1_5169412786',\n",
-       " 'NA1_5169373097',\n",
-       " 'NA1_5168650883',\n",
-       " 'NA1_5168578444']"
+       " 'NA1_5170670210']"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
        "dict_keys(['metadata', 'info'])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1134,7 +1134,7 @@
        "  'win': True}]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1150,7 +1150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1159,7 +1159,7 @@
        "'8CsAUQYhSFNn-XysZw-C_hvlN6Z4yTUR7DyMnYX_QblWQHme8bEUroCSHvh5sPtrD285XLMOvvyAMQ'"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1174,7 +1174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1314,7 +1314,7 @@
        " 'win': True}"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1335,7 +1335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1383,16 +1383,67 @@
     "    return champion_list\n",
     "\n",
     "# Call the function and print the result\n",
-    "result = traits_used(boxbox_current_match, name_mapping)\n",
-    "print(result)\n",
+    "traits = traits_used(boxbox_current_match, name_mapping_trait)\n",
+    "print(traits)\n",
     "\n",
-    "result = champions_items_used(boxbox_current_match)\n",
-    "print(result)\n"
+    "champions = champions_items_used(boxbox_current_match)\n",
+    "print(champions)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data inserted successfully!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import import_ipynb\n",
+    "from db_connection import get_connection\n",
+    "\n",
+    "#Get database connection\n",
+    "conn = get_connection()\n",
+    "\n",
+    "try:\n",
+    "    cursor = conn.cursor()\n",
+    "\n",
+    "    ##Set up JSON data for insertion\n",
+    "    traits_json = json.dumps(traits)\n",
+    "    champions_json = json.dumps(champions)\n",
+    "    \n",
+    "    # SQL query to insert data\n",
+    "    insert_query = \"\"\"\n",
+    "    INSERT INTO public.matches_raw (match_id, traits, champions)\n",
+    "    VALUES (%s, %s, %s)\n",
+    "    \"\"\"\n",
+    "\n",
+    "     # Execute the query\n",
+    "    cursor.execute(insert_query, (match_id, traits_json, champions_json))\n",
+    "    \n",
+    "    # Commit the transaction\n",
+    "    conn.commit()\n",
+    "    print(\"Data inserted successfully!\")\n",
+    "    \n",
+    "except Exception as e:\n",
+    "    print(\"Error:\", e)\n",
+    "\n",
+    "finally:\n",
+    "    # Close the connection\n",
+    "    if conn:\n",
+    "        cursor.close()\n",
+    "        conn.close()\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
