WIP for data transformation before inserting into database

--- a/TFT_DataCollection.ipynb
+++ b/TFT_DataCollection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,13 +38,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['NA1_5181663428',\n",
+       "['NA1_5185193955',\n",
+       " 'NA1_5185189746',\n",
+       " 'NA1_5185144202',\n",
+       " 'NA1_5185124729',\n",
+       " 'NA1_5185111317',\n",
+       " 'NA1_5185082362',\n",
+       " 'NA1_5185061896',\n",
+       " 'NA1_5185008908',\n",
+       " 'NA1_5181663428',\n",
        " 'NA1_5181656785',\n",
        " 'NA1_5180322566',\n",
        " 'NA1_5180263750',\n",
@@ -85,18 +93,10 @@
        " 'NA1_5172681346',\n",
        " 'NA1_5171810754',\n",
        " 'NA1_5171766312',\n",
-       " 'NA1_5171710318',\n",
-       " 'NA1_5171638133',\n",
-       " 'NA1_5171587618',\n",
-       " 'NA1_5171549609',\n",
-       " 'NA1_5170858395',\n",
-       " 'NA1_5170816673',\n",
-       " 'NA1_5170771555',\n",
-       " 'NA1_5170719769',\n",
-       " 'NA1_5170670210']"
+       " 'NA1_5171710318']"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
        "dict_keys(['metadata', 'info'])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1134,7 +1134,7 @@
        "  'win': True}]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1150,7 +1150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1159,7 +1159,7 @@
        "'8CsAUQYhSFNn-XysZw-C_hvlN6Z4yTUR7DyMnYX_QblWQHme8bEUroCSHvh5sPtrD285XLMOvvyAMQ'"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1174,7 +1174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1314,7 +1314,7 @@
        " 'win': True}"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1335,7 +1335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1392,7 +1392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1410,40 +1410,124 @@
     "#Get database connection\n",
     "conn = get_connection()\n",
     "\n",
-    "try:\n",
-    "    cursor = conn.cursor()\n",
+    "##Function to add raw match data per unique match_id\n",
+    "def insert_raw_match_data(conn,match_id, traits, champions):\n",
     "\n",
-    "    ##Set up JSON data for insertion\n",
-    "    traits_json = json.dumps(traits)\n",
-    "    champions_json = json.dumps(champions)\n",
-    "    \n",
-    "    # SQL query to insert data\n",
-    "    insert_query = \"\"\"\n",
-    "    INSERT INTO public.matches_raw (match_id, traits, champions)\n",
-    "    VALUES (%s, %s, %s)\n",
-    "    \"\"\"\n",
+    "    try:\n",
+    "        cursor = conn.cursor()\n",
     "\n",
-    "     # Execute the query\n",
-    "    cursor.execute(insert_query, (match_id, traits_json, champions_json))\n",
-    "    \n",
-    "    # Commit the transaction\n",
-    "    conn.commit()\n",
-    "    print(\"Data inserted successfully!\")\n",
-    "    \n",
-    "except Exception as e:\n",
-    "    print(\"Error:\", e)\n",
+    "        ##Set up JSON data for insertion\n",
+    "        traits_json = json.dumps(traits)\n",
+    "        champions_json = json.dumps(champions)\n",
+    "        \n",
+    "        # SQL query to insert data\n",
+    "        insert_query = \"\"\"\n",
+    "        INSERT INTO public.matches_raw (match_id, traits, champions)\n",
+    "        VALUES (%s, %s, %s)\n",
+    "        \"\"\"\n",
     "\n",
-    "finally:\n",
-    "    # Close the connection\n",
-    "    if conn:\n",
-    "        cursor.close()\n",
-    "        conn.close()\n",
+    "        # Execute the query\n",
+    "        cursor.execute(insert_query, (match_id, traits_json, champions_json))\n",
+    "        \n",
+    "        # Commit the transaction\n",
+    "        conn.commit()\n",
+    "        print(\"Data inserted successfully!\")\n",
+    "        \n",
+    "    except Exception as e:\n",
+    "        print(\"Error:\", e)\n",
+    "\n",
+    "    finally:\n",
+    "        # Close the connection\n",
+    "        if conn:\n",
+    "            cursor.close()\n",
+    "            conn.close()\n",
+    "\n",
+    "insert_raw_match_data(conn, match_id, traits, champions)\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Black Rose\n",
+      "5\n",
+      "Gold\n",
+      "Form Swapper\n",
+      "2\n",
+      "Bronze\n",
+      "Dominator\n",
+      "4\n",
+      "Silver\n",
+      "Visionary\n",
+      "2\n",
+      "Bronze\n",
+      "Sorcerer\n",
+      "3\n",
+      "Bronze\n",
+      "Conqueror\n",
+      "2\n",
+      "Bronze\n",
+      "{'Black Rose': {'num_units': 5, 'rarity': 'Gold'}, 'Form Swapper': {'num_units': 2, 'rarity': 'Bronze'}, 'Dominator': {'num_units': 4, 'rarity': 'Silver'}, 'Visionary': {'num_units': 2, 'rarity': 'Bronze'}, 'Sorcerer': {'num_units': 3, 'rarity': 'Bronze'}, 'Conqueror': {'num_units': 2, 'rarity': 'Bronze'}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('tft_set13_trait_tiers.json','r') as f:\n",
+    "    trait_tiers_mapping = json.load(f)\n",
+    "\n",
+    "# Preprocess the mapping into a dictionary\n",
+    "trait_tiers_dict = {\n",
+    "    trait['trait_name']: trait['tiers'] for trait in trait_tiers_mapping\n",
+    "}\n",
+    "\n",
+    "# Initialize dictionary to store trait data\n",
+    "traits_info = {}\n",
+    "\n",
+    "for trait in traits:\n",
+    "    trait_name = trait['name']\n",
+    "    tier_current = trait['tier_current']\n",
+    "    print(trait_name)\n",
+    "    print(trait['num_units'])\n",
+    "\n",
+    "    # Utilize dictionary key to retrieve trait tiers\n",
+    "    trait_tiers = trait_tiers_dict.get(trait_name)\n",
+    "\n",
+    "    # Check if trait has tiers\n",
+    "    if trait_tiers:\n",
+    "        for tier in trait_tiers:\n",
+    "            # Check if the trait hasn't been added yet and tier matches\n",
+    "            if trait_name not in traits_info and tier_current == tier['tier_id']:\n",
+    "                rarity = tier['tier_name']\n",
+    "                print(rarity)\n",
+    "\n",
+    "                # Add trait information to dictionary\n",
+    "                traits_info[trait_name] = {\n",
+    "                    'num_units': trait['num_units'],\n",
+    "                    'rarity': rarity\n",
+    "                }\n",
+    "\n",
+    "                # Mark this trait as added (optional, since dictionary keys are unique)\n",
+    "                break  # Break the inner loop since the trait has been processed\n",
+    "\n",
+    "# Now you have a dictionary of traits with their attributes\n",
+    "print(traits_info)\n",
+    "            \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1468,7 +1552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1503,7 +1587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
